# skill

./: .buildinfo  .editorconfig  CHANGELOG.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  table_of_contents.html
.claude/skills/: skill-build  skill-docs  skill-enable  skill-manage  skill-package-setup  skill-sync
.claude/skills/skill-build/: SKILL.md
.claude/skills/skill-docs/: SKILL.md
.claude/skills/skill-enable/: SKILL.md
.claude/skills/skill-manage/: SKILL.md
.github/workflows/: ci.yml
_modules/: index.html  skill.html
_modules/skill/: __main__.html  ai.html  backends.html  base.html  cli_format.html  completion.html  config.html  create.html  install.html  registry.html  search.html  stores.html  translate.html  util.html
_modules/skill/backends/: awesome_list.html  composio.html  github.html  skillsdirectory.html  smithery.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: skill.rst.txt
_sources/module_docs/skill/: __main__.rst.txt  ai.rst.txt  backends.rst.txt  base.rst.txt  cli_format.rst.txt  completion.rst.txt  config.rst.txt  create.rst.txt  install.rst.txt  registry.rst.txt  search.rst.txt  stores.rst.txt  translate.rst.txt  util.rst.txt
_sources/module_docs/skill/backends/: awesome_list.rst.txt  composio.rst.txt  github.rst.txt  skillsdirectory.rst.txt  smithery.rst.txt
docsrc/: table_of_contents.rst
misc/docs/: Cross-agent skill format compatibility and translation.md  Remote skill backends for building a Python skill package.md  Skill - AI API Facade & Configuration Management.md  Skill - Storage Architecture & Installation Patterns for the skill Package.md  Skill - Storage Architecture & Installation Patterns.md  The AI agent skills ecosystem - a complete landscape survey.md  gh-skill-reference.md  plugin_system.md  skill-management-best-practices.md  skill_distribution_analysis.md  skill_implementation_research_prompt.md  skill_package_definition.md  skill_project_review.md  skill_strategic_research_prompt.md
module_docs/: skill.html
module_docs/skill/: __main__.html  ai.html  backends.html  base.html  cli_format.html  completion.html  config.html  create.html  install.html  registry.html  search.html  stores.html  translate.html  util.html
module_docs/skill/backends/: awesome_list.html  composio.html  github.html  skillsdirectory.html  smithery.html
skill/: __init__.py  __main__.py  ai.py  base.py  cli_format.py  completion.py  config.py  create.py  install.py  registry.py  search.py  stores.py  translate.py  util.py
skill/backends/: __init__.py  awesome_list.py  composio.py  github.py  skillsdirectory.py  smithery.py
skills/skill-build/: SKILL.md
skills/skill-enable/: SKILL.md
skills/skill-package-setup/: SKILL.md
skills/skill-package-setup/references/: canonical-layout-and-distribution.md  migration-runbook.md
skills/skill-sync/: SKILL.md
tests/: test_backends.py  test_base.py  test_cli.py  test_config.py  test_create.py  test_install.py  test_install_from_github.py  test_registry.py  test_search.py  test_stores.py  test_translate.py  test_util.py
