[metadata]
name = skill
version = 0.0.2
url = https://github.com/thorwhalen/skill
platforms = any
description_file = README.md
description = Extract code exercises from code itself
license = mit
keywords = 
root_url = https://github.com/thorwhalen/
author = Thor Whalen
display_name = skill

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 

